Switch server JVM to generational ZGC (DH recommends against G1)